# ICIQ-FdQzBd45

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
08-Omnifood-Responsive/css/: style.css
08-Omnifood-Responsive/table/: table.css  table.html
LitterQuitter/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_points.py
garbage/: admin.py  forms.py  models.py  urls.py  views.py
garbage/migrations/: 0001_initial.py  0002_rename_where_to_displose_garbage_where_to_dispose.py  0003_garbage_cleaned_by.py  0004_garbage_cleaned.py  0005_alter_garbage_number_of_points.py  0006_rename_location_link_garbage_location.py
garbage/templates/: base.html  index.html
garbage/templates/garbage/: detail.html  index.html  register.html
